# crm-de-vendas

./: 404.html  README.md  index.html  objects.inv  profiles.yml  pyproject.toml  requirements.txt
dbt_crm_vendas/: dbt_project.yml
dbt_crm_vendas/docs/: homepage.md
dbt_crm_vendas/models/: sources.yml
dbt_crm_vendas/models/bronze/: bronze_vendas.sql  schema.yml
dbt_crm_vendas/models/gold/: gold_vendas_por_produto.sql  gold_vendas_por_vendedor.sql  schema.yml
dbt_crm_vendas/models/silver/: schema.yml  silver_vendas.sql
docs/: index.md
search/: search_index.json
src/: contrato.py  database.py  frontend.py
