[tool.poetry]
name = "elt-crm-de-vendas"
version = "0.1.0"
description = ""
authors = ["ianlucasch <ianlucaschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.9.2"}
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
